--- a/my-tourism-app/tsconfig.app.json
+++ b/my-tourism-app/tsconfig.app.json
@@ -21,6 +21,6 @@
     "esModuleInterop": true,
     "resolveJsonModule": true
   },
-  "include": ["src"],
+  "include": ["src", "src/global.d.ts"],
   "exclude": ["node_modules"]
 }
